--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jmp3833/fuzzer",
   "dependencies": {
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "zombie": "^4.1.0"
   }
 }
